# circle-calculus

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Circle.lean  LICENSE  Makefile  README.md  lake-manifest.json  lakefile.lean  pyproject.toml
Circle/: Basic.lean  Contracts.lean  Core.lean
circle_calculus_codex_handoff/: CI_AND_VERIFICATION.md  FORMAL_CORE_V0.md  GODEL_AND_LIMITATIONS.md  PAPER_RULES_AND_TEMPLATE.md
circle_calculus_dimensional_handoff/: CODEX_DIMENSIONAL_LADDER_GOAL.md  DIMENSIONAL_DICTIONARY_STARTER.yaml  DIMENSIONAL_LIMITATIONS_AND_WARNINGS.md  DIMENSIONAL_REPO_ORGANIZATION.md  DIMENSION_MANIFESTS_SPEC.md  REFERENCE_NOTES.md
circle_math/: __init__.py  additive.py  ai_contracts.py  circle_graph_coverage.py  circular_statistics.py  cli.py  contracts.py  core.py  equivariance.py  extremal.py  finite.py  finite_search.py  generative.py  harmonics.py  number_provenance.py  phase_loop.py  physics.py  position_phase.py  winding.py
dictionary/: circle_dictionary.schema.json  circle_dictionary.yaml
docs/: AI_CONTRACT_SUITE.md  CHANGE_AWARE_VALIDATION.md  CIRCLE_AI_CONTRACTS_INTEGRATION.md  CIRCLE_AI_CONTRACT_RUNNER.md  CIRCLE_AI_ML_ENGINEER_QUICKSTART.md  CIRCLE_GRAPH_COVERAGE.md  CIRCLE_METHODS_EXTREMAL_COMBINATORICS.md  CIRCLE_PHASE_PROBE_DEMO.md  CIRCLE_RESEARCH_EXPANSION_BACKLOG.md  CIRCULANT_BLOCK_CYCLIC_MIXER_CERTIFIER_QUICKSTART.md  CIRCULAR_STATISTICS_CONTRACTS.md  COMPLETION_ROADMAP.md  CONTRACT_SCHEMA_VERSIONING.md  CYCLIC_EQUIVARIANCE.md  CYCLIC_MEMORY_CERTIFIER_QUICKSTART.md  DIMENSIONAL_LADDER.md  ERDOS_CIRCLE_MATH_REVIEW.md  FINITE_FOURIER_CIRCULANT.md  FORMAL_CORE_V0.md  GITHUB_PAGES.md  GODEL_AND_LIMITATIONS.md  GOOGLE_DRIVE_CIRCLE_IDEAS_AUDIT.md  KV_CACHE_CERTIFIER_QUICKSTART.md  LIVING_BOOK_POLICY.md  LIVING_BOOK_ROADMAP.md  LIVING_BOOK_WIDGETS.md  MULTICOIL_PHASE_FEATURE_CERTIFIER_QUICKSTART.md  PACKAGING_AND_RELEASE.md  PHASE2_AND_APPLICATIONS.md  PHASE5_EDGE_TARGETS.md  PHASE7_PHYSICS_AND_GENERATORS.md  PHASE8_DEPTH_VALIDATION.md  PHASE_LOOP_CONTRACTS.md  POSITION_PHASE_BANKS.md  POSITION_PHASE_CONTRACTS.md  PRIME_ENGINE.md  PRIME_FUZZY_HYBRID.md  PROOF_DEPTH_AUDIT.md  PROOF_POLICY.md  PUBLIC_API.md  (+10 more)
examples/: circle_ai_contract_acceptance_policy.json  downstream_ci_accept_circle_ai_contracts.py  downstream_ci_verify_circle_ai_artifacts.py  downstream_ci_verify_circle_ai_batch.py
manifests/: capability_showcase.yaml  paper_manifest.yaml  phase4_theorem_targets.yaml  phase5_edge_targets.yaml  phase6_sweep_targets.yaml  phase7_physics_generators.yaml  phase8_depth_validation.yaml  theorem_manifest.schema.json  theorem_manifest.yaml
papers/: PAPER_01_FINITE_CIRCLES.md  PAPER_02_WINDING_NATURALS.md  ROADMAP.md  template.md
rust/circle-prime/: Cargo.toml  README.md  build.rs  prime_engine_defaults.json
rust/circle-prime/src/: bigint.rs  coil.rs  controls.rs  fuzzy.rs  lib.rs  scalar.rs  segmented.rs  tables.rs
scripts/: apply_prime_engine_defaults.py  benchmark_prime_bigint_controls.py  benchmark_prime_external_controls.py  benchmark_prime_external_next.py  benchmark_prime_external_next_shifted.py  benchmark_prime_fuzzy_hybrid_any.py  benchmark_prime_fuzzy_hybrid_next.py  calibrate_prime_engine_defaults.py  check_application_guardrails.py  check_capability_showcase.py  check_circle_ai_artifact_manifest.py  check_circle_ai_certification_bundle.py  check_circle_ai_contract_acceptance_policy.py  check_circle_ai_contract_docs.py  check_circle_ai_contract_pack.py  check_circle_ai_contract_runner.py  check_circle_ai_receipt.py  check_circle_ai_receipt_replay.py  check_claim_language.py  check_dictionary.py  check_dimension_imports.py  check_dimension_index.py  check_dimension_manifests.py  check_dimension_paper_links.py  (+61 more)
(+573 files in other folders)
