[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "circle-calculus"
version = "0.1.0"
description = "Circle Calculus paper-and-proof corpus with Lean sidecars and Python reference models."
requires-python = ">=3.9"
dependencies = [
  "jsonschema",
  "numpy",
  "PyYAML",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests", "sidecars"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["circle_math*"]
